# HEngram

./: .gitignore  CONTRIBUTING.md  HEngram.cabal  LICENSE  README.md
app/: Main.hs
src/: App.hs  Embeddings.hs  Main.hs  Redis.hs  Types.hs
test/: AppSpec.hs  RedisSpec.hs  Spec.hs  TypesSpec.hs
