cabal-version:      3.0
name:               HEngram
version:            0.1.0.0
synopsis:           Pure Functional Bare-Metal MCP Server
description:        Agentic Knowledge Graph using RediSearch and Servant.
license:            MIT
author:             Antigravity
maintainer:         antigravity@deepmind.com
category:           Web
build-type:         Simple

executable hengram
    main-is:          Main.hs
    other-modules:    Types
                    , Redis
    build-depends:    base >= 4.17 && < 5
                    , servant
                    , servant-server
                    , warp
                    , wai
                    , wai-cors
                    , wai-extra
                    , hedis
                    , aeson
                    , stm
                    , mtl
                    , transformers
                    , text
                    , bytestring
                    , containers
                    , uuid
                    , http-types
                    , http-media
                    , binary
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    default-extensions:
        DataKinds
        DeriveGeneric
        FlexibleContexts
        OverloadedStrings
        TypeOperators
        TypeFamilies
        ScopedTypeVariables
        MultiParamTypeClasses
